finilazing project in angular for college - fixed data and text for display

--- a/src/app/home/components/author/author.component.html
+++ b/src/app/home/components/author/author.component.html
@@ -8,10 +8,10 @@
   <div class="mx-auto max-w-2xl lg:max-w-4xl">
     <figure class="mt-10">
       <blockquote class="text-center text-xl font-semibold leading-8 text-gray-900 sm:text-2xl sm:leading-9">
-        <p>“Your custom content goes here. Feel free to replace this text with your own message.”</p>
+        <p>Sajt za kolokovijum iz Praktikuma iz Objektnog Web Programiranja.</p>
       </blockquote>
       <figcaption class="mt-10">
-        <img class="mx-auto h-16 w-16 rounded-full object-cover" src="https://images.unsplash.com/photo-1605462863863-10d9e47e15ee?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3w0NzEyNjZ8MHwxfHNlYXJjaHw5fHxtYW58ZW58MHwwfHx8MTY5NzQ0MjkzOHww&ixlib=rb-4.0.3&q=80&w=1080" alt="">
+        <img class="mx-auto h-16 w-16 rounded-full object-cover" src="images/author.png" alt="">
         <div class="mt-4 flex items-center justify-center space-x-3 text-base">
           <div class="font-semibold text-gray-900">Zarko Jovic</div>
           <svg viewBox="0 0 2 2" width="3" height="3" aria-hidden="true" class="fill-gray-900">
