--- a/src/app/home/components/checkout/checkout.component.html
+++ b/src/app/home/components/checkout/checkout.component.html
@@ -1,7 +1,10 @@
 <div class="py-14 px-4 md:px-6 2xl:px-20 2xl:container 2xl:mx-auto">
   <div class="flex justify-start item-start space-y-2 flex-col">
     <h1 class="text-3xl lg:text-4xl font-semibold leading-7 lg:leading-9 text-gray-800">Your order</h1>
-    <p class="text-base dark:text-gray-300 font-medium leading-6 text-gray-600">21st Mart 2021 at 10:34 PM</p>
+    <p class="text-base dark:text-gray-300 font-medium leading-6 text-gray-600">
+
+      {{ currentDate | date:'dd/MM/yyyy' }}
+    </p>
   </div>
   <div
     class="mt-10 flex flex-col xl:flex-row jusitfy-center items-stretch w-full xl:space-x-8 space-y-4 md:space-y-6 xl:space-y-0">
