--- a/src/app/home/components/home/components/hero/hero.component.html
+++ b/src/app/home/components/home/components/hero/hero.component.html
@@ -1,30 +1,34 @@
-
 <!--<app-product-list></app-product-list>-->
 <div class="bg-white dark:bg-gray-800 flex relative z-20 items-center overflow-hidden">
   <div class="container mx-auto px-6 flex relative py-16">
-    <div class="sm:w-2/3 lg:w-2/5 flex flex-col relative z-20">
+    <div class="sm:w-1/2 flex flex-col relative z-20">
                 <span class="w-20 h-2 bg-gray-800 dark:bg-white mb-12">
                 </span>
-      <h1 class="font-bebas-neue uppercase text-6xl sm:text-8xl font-black flex flex-col leading-none dark:text-white text-gray-800">
-        Be on
-        <span class="text-5xl sm:text-7xl">
-                        Time
-                    </span>
+      <h1
+        class="font-bebas-neue capitalize text-6xl sm:text-8xl font-black flex flex-col leading-none dark:text-white text-gray-800">
+        Timeless Elegance, Modern Comfort
+        <!--        <span class="text-5xl sm:text-7xl">-->
+        <!--                        Time-->
+        <!--                    </span>-->
       </h1>
       <p class="text-sm sm:text-base text-gray-700 dark:text-white">
-        Dimension of reality that makes change possible and understandable. An indefinite and homogeneous environment in which natural events and human existence take place.
+        Discover our latest collection of stylish, comfortable apparel designed to elevate your everyday look.
       </p>
       <div class="flex mt-8">
-        <a href="#" class="uppercase py-2 px-4 rounded-lg bg-pink-500 border-2 border-transparent text-white text-md mr-4 hover:bg-pink-400">
-          Get started
+        <a routerLink="shop"
+           class="uppercase py-2 px-4 rounded-lg bg-pink-500 border-2 border-transparent text-white text-md mr-4 hover:bg-pink-400">
+          Explore
         </a>
-        <a href="#" class="uppercase py-2 px-4 rounded-lg bg-transparent border-2 border-pink-500 text-pink-500 dark:text-white hover:bg-pink-500 hover:text-white text-md">
-          Read more
+        <a routerLink="contact"
+           class="uppercase py-2 px-4 rounded-lg bg-transparent border-2 border-pink-500 text-pink-500 dark:text-white hover:bg-pink-500 hover:text-white text-md">
+          Contact
         </a>
       </div>
     </div>
-    <div class="hidden sm:block sm:w-1/3 lg:w-3/5 relative">
-      <img src="https://www.tailwind-kit.com/images/object/10.png" class="max-w-xs md:max-w-sm m-auto"/>
+    <div class="hidden sm:w-1/3 lg:w-1/2 relative mx-auto sm:flex justify-center">
+      <img
+        src="https://img.freepik.com/free-photo/clothes-set_1203-8109.jpg?w=1480&t=st=1718273110~exp=1718273710~hmac=12cb1982e3c886f7e7ee35f0fa3b5eef3d690571b43692f6efb860c34a3e7a98"
+        class="w-3/5"/>
     </div>
   </div>
 </div>
